[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Materials/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/DifficultySelect/difficulty_select.gd" type="Script" id=2]

[node name="DifficultySelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -25.0
margin_right = 27.5
margin_bottom = 25.0

[node name="Normal" type="Button" parent="Buttons"]
margin_right = 55.0
margin_bottom = 14.0
text = "NORMAL"

[node name="Hard" type="Button" parent="Buttons"]
margin_top = 18.0
margin_right = 55.0
margin_bottom = 32.0
text = "HARD"

[node name="Extreme" type="Button" parent="Buttons"]
margin_top = 36.0
margin_right = 55.0
margin_bottom = 50.0
text = "EXTREME"

[connection signal="pressed" from="Buttons/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Buttons/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Buttons/Extreme" to="." method="_on_Extreme_pressed"]
